# code-world-models

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: EXPERIMENTS.md  RESEARCH-DIRECTION.md
results/: beacon_adversarial_gate.json  beacon_claimA.json  connect4_mini_vs_large.json  connect4_nano_vs_large.json  continuous_axes.json  continuous_cem.json  continuous_cem_patch2d.json  continuous_claude_relay.json  continuous_eps_sweep.json  continuous_eps_sweep_patch2d.json  continuous_mitigation.json  continuous_mitigation_patch2d.json  continuous_mitigation_ring.json  continuous_mitigation_ring_eps1.json  continuous_mitigation_ring_eps2.json  continuous_mitigation_ring_nerve.json  continuous_mitigation_ring_nerve_persist.json  continuous_patch2d.json  continuous_patch2d_square.json  continuous_pendulum.json  continuous_reach.json  continuous_ring2d.json  continuous_ring2d_key_probe.json  continuous_ring2d_mechanism.json  continuous_ring2d_open_sweep_summary.json  continuous_ring2d_pcblind_curve.json  continuous_ring2d_rint_probe.json  continuous_ring2d_tda_probe.json  continuous_shellfield.json  continuous_shellfield_nav.json  continuous_shellfield_play.json  continuous_shellfield_play_diag.json  continuous_shellfield_tda.json  continuous_shellfield_tda_inside.json  continuous_smooth_probe.json  continuous_synthesis_compat-qwen3-coder-30b-a3b-instruct_xwall8.json  continuous_synthesis_large.json  continuous_synthesis_large_xwall8.json  continuous_synthesis_mini.json  continuous_synthesis_mini_xwall4.json  (+75 more)
scripts/: beacon_adversarial_gate.py  beacon_claimA.py  (+61 more)
(+243 files in other folders)
