[project]
name = "cwm"
version = "0.1.0"
description = "Code World Models vs LLM-as-policy — MVP"
requires-python = ">=3.11"
dependencies = ["openai>=1.40.0", "python-dotenv>=1.0.0", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
tda = ["gudhi>=3.13.0"]  # paper-3 n-dim contact-cloud persistent homology (alpha complex)

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
